# Intresting_projects_to_learn_top_projects

./: AI_AGENT_SYSTEM_DESIGN.md  MASTER_EXPLANATION.md  MULTIAGENT_EXPLANATION_DETAIL.md
AI-Engineering-main/24_Langgraph/apps/api/: pyproject.toml
LLM-staging/: .gitignore  .gitleaksignore  .pre-commit-config.yaml  .yamllint  CODEOWNERS  Dockerfile  LICENSE  README.md  explination_detail.md  pyproject.toml
LLM-staging/.github/workflows/: scanner-ci.yml
LLM-staging/configs/: bench_1b_z1.yaml  bench_3b_z0_galore.yaml  bench_3b_z3.yaml  bench_8b_z3.yaml  curriculum_v2.yaml  lr_schedule.yaml  lr_schedule_120b.yaml  lr_schedule_8b_growth.yaml  test_curriculum_checkpoint.yaml  test_opus_1b.yaml  test_opus_3b.yaml  test_opus_8b.yaml  train_120b_tqp.yaml  train_1b_nonrev_z0_galore.yaml  train_1b_nonrev_z1.yaml  train_5b.yaml  train_70b_tqp.yaml  train_8b_moe_z0_galore.yaml  train_9b.yaml
LLM-staging/data/: README.md
LLM-staging/deepspeed/: zero-0-1b-galore.json  zero-0-3b-galore.json  zero-1-120b-tqp.json  zero-1-1b.json  zero-1-70b-tqp.json  zero-2-3b.json  zero-3-1b-gc1-wd01.json  zero-3-1b-gc1.json  zero-3-1b.json  zero-3-1b.json.baseline  zero-3-70b-tqp.json  zero-3-moe-bf16.json
LLM-staging/docs/: cookbook.md  data_pipeline.md  runtime_hotconfig.md  tokenizer_pipeline.md
LLM-staging/docs/1_data_radar_and_acquisition/: README.md
LLM-staging/docs/2_curirculum_architects/: CURRICULUM_PLAYBOOK.md  Curriculum_Design_Pipeline.ipynb  USAGE_STEPS.md
LLM-staging/docs/2_curirculum_architects/findings/: README_CURRICULUM.md
LLM-staging/experiments/10_slm_training/Optimized_shared_code/: README.md  model_1b.py  reversible_ops_midpoint.py  test_optimizations.py  test_wikitext2_reference_gpt2.py  train_wikitext2_model_1b_gpt2.py
LLM-staging/experiments/10_slm_training/llm_architecture/: README.md  benchmark_throughput.py  cmd.full1b  cmd.wiki  pyproject.toml  requirements.txt  visualize_benchmarks.py
LLM-staging/experiments/10_slm_training/shared_code/: README.md  (+2 more)
LLM-staging/experiments/12_training_operations/: .gitignore
LLM-staging/experiments/15_resource_scheduling_and_GPU_utilization/: README.md
LLM-staging/experiments/19_reproducibility_provenance_and_experiment_tracking/: complexity_management.md  contribution.md
LLM-staging/experiments/1_data_radar_and_acquisition/: README.md  dataset_normalization.md  dataset_stratergy.md
LLM-staging/experiments/2_curirculum_architects/: ARCHITECTURE_AND_DECISIONS.md  README.md  curriculum.yaml  pyproject.toml
LLM-staging/experiments/3_coreset_engineering/: README.md  README_CORESET_SELECTION.md  pyproject.toml
LLM-staging/experiments/5_data_qa_and_leakage_control/: README.md
LLM-staging/lightninglm/: __init__.py
LLM-staging/lightninglm/aws/: __init__.py  config.py
LLM-staging/lightninglm/checkpointing/: checkpoint.py
LLM-staging/lightninglm/components/: README.md  __init__.py  metrics_server.py  spot_checkpoint.py  system_architecture.md  training_ops.py
LLM-staging/lightninglm/data/: __init__.py  bin_idx_dataloader.py  curriculum_dataloader_v2.py  curriculum_dataloader_v2_map.py  data.py
LLM-staging/lightninglm/growth/: __init__.py  dense_to_moe.py  depth_map.py
LLM-staging/lightninglm/kernels/: README.md  __init__.py  moe_grouped_gemm.py  triton_cross_entropy.py  triton_delta_entrance.py  triton_deltanet_post_train.py  triton_fused_proj.py  triton_fused_rope.py  triton_indexer.py  triton_indexer_streaming.py  triton_mhc_stream.py  triton_moe_fused_gate_up.py  triton_moe_grouped_gemm.py  triton_moe_weighted_scatter.py  triton_rmsnorm.py  triton_sigmoid_gate.py  triton_sinkhorn.py  triton_sparse_attn.py  triton_sparse_attn_v2.py  triton_xsa_projection.py
LLM-staging/lightninglm/models/: __init__.py  liger_ops.py  recurrance_model_1b_non_rev_v2.py  recurrance_model_8b_moe_rollout.py  recurrence_model_120b_moe.py  recurrence_model_1b_non_rev.py  recurrence_model_3b_moe.py  recurrence_model_70b_moe.py  recurrence_model_8b_moe.py  reversible_ops_midpoint.py
LLM-staging/lightninglm/opus/: __init__.py  countsketch.py  distributed.py  ghost.py  preconditioner.py  proxy.py  selector.py  triton_countsketch.py
LLM-staging/lightninglm/tqp/: __init__.py  codebook.py  expert_parallel.py  stochastic_round.py  tqp_integration.py  tqp_moe_expert_parallel.py  triton_tqp_grouped.py  turboquant_pretraining_linear.py
LLM-staging/lightninglm/training/: __init__.py  staged_lr.py  train.py
LLM-staging/lightninglm/utils/: profiler.py  utils.py
LLM-staging/manifests/: AON_bench_train_shards.txt  AON_indic_shards.txt  D1_shards.txt  D2_shards.txt  D3_shards.txt  D4_shards.txt  DROPPED_B2_shards.txt  GP_shards.txt  curriculum_v2_manifest.json  indic_numerals_exclude.txt
LLM-staging/requirements/: runtime.txt  stable-cu128.txt
LLM-staging/scripts/: build_120b_init.py  create_curriculum_test_shards.py  create_shards.py  doctor.py  generate_idx_files.sh  hash_tensors.py  preview_curriculum_shards.py  run_120b_tqp.sh  run_2b_stage.sh  run_5b_stage.sh  run_9b_stage.sh  run_training.sh  save_init_model.py  setup_aws_b300.sh  setup_stable.sh  simulate_spot_termination.py  test_resume.sh  train_entrypoint.py  triton_softcast_patch.py
LLM-staging/scripts/data/: clean.py  curriculum_dataloader.py  curriculum_dataloader_v2.py  generate_manifest_v2.py  process.py  stream_process_all.py  test_cleaning_smoke.py  test_curriculum.py  token_analysis.py  verify.py
LLM-staging/scripts/tokenizer/: DownloadSamplesIndic.py  build_hybrid_tokenizer.py  build_tokenizer.py  fertility_analysis.py
LLM-staging/tests/: test_release_structure.py
LLM-staging/tokenizer/: TOKENIZATION_REPORT.md  TOKENIZER_COMPARISON_REPORT.md  TOKEN_ANALYSIS_REPORT.md  fertility_analysis.json  token_inv_permutation.npy  token_permutation.npy  tokenizer_config.json
LLM-staging/tokenizer/byte_analysis/: REPORT.md  analyze.py  coverage.csv  tokens.csv
LLM-staging/tokenizer/paper_artifacts/: fertility_methodology.md  roundtrip_check.py  verify_kronecker_constraints_unified.py  verify_max_byte_length.py  verify_no_cross_script_merges.py
(+901 files in other folders)
