[project]
name = "lightninglm-training"
version = "0.1.0"
description = "Training pipeline and cookbook for LightningLM."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.39",
    "botocore>=1.42.39",
    "datasets>=4.5.0",
    "deepspeed==0.18.6",
    "einops==0.8.2",
    "mpi4py>=4.1.1",
    "numpy>=1.21.0",
    "nvidia-ml-py>=13.590.48",
    "pandas>=3.0.0",
    "pyarrow>=10.0.0",
    "pynvml>=13.0.1",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
    "safetensors>=0.7.0",
    "torch==2.7.1",
    "torchvision==0.22.1",
    "transformers>=5.0.0",
    "triton==3.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint.per-file-ignores]
# Release artifact paths — production code, deferred stylistic cleanup.
# E402: imports after path/env setup are intentional in launch scripts and kernel modules.
# E741: single-letter variables (l, M, E, D) are tensor/matrix notation common in the codebase.
# E731: lambda assignments used as inline configuration adapters.
# F401: try/except availability detection (e.g. HAS_TRITON) and bundle imports.
# F841: unused locals retained as debugging anchors or future-use placeholders.
"lightninglm/**" = ["E402", "E741", "E731", "F841", "F401"]
"scripts/**"     = ["E402", "E741", "E731", "F841", "F401"]
"tokenizer/**"   = ["E402", "E741", "E731", "F841", "F401"]
