[project]
name = "coreset-engineering"
version = "0.1.0"
description = "Coreset Selection Engineering"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.2",
    "torch>=2.10.0",
    "pyyaml>=6.0.3",
    "dataclasses-json>=0.6.7",
    "tqdm>=4.67.3",
    "pydantic>=2.12.5",
    "xxhash>=3.6.0",
    "scipy>=1.17.0",
    "scikit-learn>=1.8.0",
    "pandas>=3.0.0",
    "pyarrow>=23.0.1",
    "boto3>=1.42.50",
    "dill>=0.4.1",
    "faiss-cpu>=1.13.2",
    "orjson>=3.11.7",
    "ray>=2.53.0",
    "dacite>=1.9.2",
    "joblib>=1.5.3",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.uv]
managed = true
