[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-contamination-scanner"
version = "0.1.0"
description = "Data contamination detection for LLM training datasets"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "tqdm",
    "datasketch",
    "rich",
    "datasets",
    "boto3",
    "faiss-cpu",
    "sentence-transformers",
]

[tool.hatch.build.targets.wheel]
packages = ["core"]
